--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,6 @@
-4.sep (ws)
+4.sep (lv)
+      - fix #12276: MusicXML import: sub-optimal handling of different duration measures
+      (ws)
       - voltas are now anchord to measures instead of segments
       - removed UndoGroup class
 2.sep (ws)
