--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,5 @@
 5.sep (ws)
+      - fix #12395: Several issues with property pop menu (patch from Miwarre)
       - implemented spanners (haipins etc.) for linked parts
 4.sep (lv)
       - fix #12276: MusicXML import: sub-optimal handling of different duration measures
