--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,5 @@
 6.sep (ws)
+      - fix 12430: edit style does not set score dirty bit
       - fix 12429: crash loading V1 scores
 5.sep (ws)
       - fix #12137: Extending length of note into non-existing bar in part causes crash
