--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,5 @@
+10.sep (lv)
+      - fix iotest for MusicXML _ref.xml files
 7.sep (ws)
       - first implementation of metronome; missing: icon, volume
       - fix 12447: Changing volta text doesn't work
