--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,5 @@
 16.nov (ws)
+      - fix #13684: Undo doesn't restore tie direction
       - added "styled" option to header and footer
 15.nov (ws)
       - fix SVG export; font glyphs are now exported as outlines,
