--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,5 @@
 16.nov (ws)
+      - fix #13657: Plgin: new Score() causes crash when navigator is visible
       - fix #13684: Undo doesn't restore tie direction
       - added "styled" option to header and footer
 15.nov (ws)
