--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,5 @@
 16.nov (ws)
+      - fix #13602: 4/4 common time and 2/2 alla breve do not apply to score
       - fix #13657: Plgin: new Score() causes crash when navigator is visible
       - fix #13684: Undo doesn't restore tie direction
       - added "styled" option to header and footer
