--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,5 @@
 17.nov (ws)
+      - fix #13703: SVG export overlaps mulipage scores
       - fix #4645-2: do not disable script debugger when no score open
 16.nov (ws)
       - fix #13692: Can't make plugins work
