fix #13478: Zoom during playback using shortcuts

--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,5 @@
+17.nov (la)
+      - fix #13478: Zoom during playback using shortcuts
 29.oct (la)
       - fix #13357: Creating part causes crash (key sig corruption)
       - fix #13364: Score tabs disappear
