fix #13478: Zoom during playback using shortcuts

--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,5 +1,6 @@
 17.nov (la)
       - fix #13411: Courtesy clef appears in final bar after bars re-adjust
+      - fix #13478: Zoom during playback using shortcuts
        (ws)
       - fix #13697: Default page size
       - fix #13703: SVG export overlaps mulipage scores
