--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,5 @@
 22.nov (ws)
+      - fix #13711: Vertical Frames moveable
       - fix #13709: Frames and editing text
       (la)
       - add Score.filepath and Score.filename in plugin framework (patch by Soerboe)
