increase default size to 1024x768

--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,5 @@
 24.nov (la)
+      - increase default size to 1024x768
       - remove working directory, clean mydirectories, create them on startup
 22.nov (ws)
       - fix #13710: Horizontal frames issue
