--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,5 @@
+26.nov (lv)
+      - fix #13782: MusicXML: Errors in Import and Crash after closing
 17.nov (la)
       - fix #13478: Zoom during playback using shortcuts
 29.oct (la)
