code cleanup MusicXML importer/exporter

--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,5 @@
+28.nov (lv)
+      - code cleanup MusicXML importer/exporter
 27.nov (lv)
       - testfile for #13860: MusicXML: support lyrics exported by Sibelius 7
 26.nov (lv)
