--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,5 @@
 28.nov (lv)
+      - updated MusicXML testfiles: added <sound dynamics="...">
       - code cleanup MusicXML importer/exporter
 27.nov (lv)
       - testfile for #13860: MusicXML: support lyrics exported by Sibelius 7
