--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,5 @@
 1.dec (ws)
+      - fix #13907: opening preferences window crashes
       - fix #13850: Instrument short and long names are not imported for 1.1 scores
         (patch from Gai-Luron)
       - fix #13771: Opening 1.1 score causes crash (patch from Gai-Luron)
