--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,6 @@
+3.dec (lv)
+      - fix #13860: MusicXML: support lyrics exported by Sibelius 7
+      - updated MusicXML testfiles: added <sound dynamics="...">
 2.dec (ws)
       - fix #13910: Lyrics of 1.1 score appear offset
       - fix #13911: Notes do not reposition for lyrics
