--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,3 +1,6 @@
+4.dec (lv)
+      - fix MusicXML export of metronome
+      - fix compiler warning on exportxml.cpp
 3.dec (ws)
       - changing score metadata is now undoable and sets score dirty
       - new commands: "next score" (F3) and "previous score" (Shift+F3)
