--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -2,6 +2,7 @@
       - fix MusicXML export of metronome
       - fix compiler warning on exportxml.cpp
 3.dec (ws)
+      - fix dynamic layout of text frame
       - changing score metadata is now undoable and sets score dirty
       - new commands: "next score" (F3) and "previous score" (Shift+F3)
       (lv)
