--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,5 @@
 6.dec (ws)
+      - add cut time/common time symbols to new wizard
       - fix #13697: default page size handling in preferences
       (lv)
       - copy tuplet change from importgtp.cpp rev 5087
