--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,6 @@
-2.dec
+10.dec (lv)
+      - fix #12445: [MusicXML] Import can produce empty voice 1
+2.dec (lv)
       - fix #11221: Don't set "Break multi measure rest" when importing from MusicXML
       - fix #13860: MusicXML: support lyrics exported by Sibelius 7
 28.nov (lv)
