--- a/trunk/mscore/ChangeLog
+++ b/trunk/mscore/ChangeLog
@@ -1,4 +1,13 @@
 12.dec (ws)
+      - fix #13982: Different time signatures should be listed vertically during
+        score creation
+      - fix #13983: Common time and alla breve symbols should be black colour
+        during score creation
+      - fix #13984: Selecting common time or alla vreve symbol during score
+        dreation shouldn't change numeral time signature
+      - fix #13985: Selecting common time or alla breve symbol during score
+        creation should grey out numerals
+      - fix #13963: Pasting on existing grace note makes it disappear
       - fix #14022: Creating chord name failed
 7.dec (ws)
       - change MuseScore logo in help box
