--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,3 +1,6 @@
+15.dec (ws)
+      - new linetypes for upprall+trill prallprall+trill
+      - fix line drop for page > 1
 12.dec (lv)
       - fix #12445: [MusicXML] Import can produce empty voice 1
        (ws)
