--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,5 +1,7 @@
+20.dec (lv)
+      - fix #14118: [MusicXML] Import of tuplets containing chords is incorrect
 13.dec (lv)
-      - fix #5947: [MusicXML] Slurs is not well placed with grace note
+      - fix  #5947: [MusicXML] Slurs is not well placed with grace note
       - fix #12445: [MusicXML] Import can produce empty voice 1:
                      set (automativally) generated rests to invisible
       - fix #12349: Wrong placed slurs after importing a MusicXML file
