--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,8 +1,9 @@
 22.dec (ws)
       - save "pos" element in addition to "offset" for better upward
         compatibility to 2.0 version
-      (lv)
+       (lv)
       - fix #14088: [MusicXML] Problem importing triplets from XML if tuplet element is missing
+      - fix #14160: [MusicXML] Problem importing tuplets from XML in a multi-voice context
 20.dec (lv)
       - fix #14118: [MusicXML] Import of tuplets containing chords is incorrect
 13.dec (lv)
