--- a/branches/mscore-0-9-6/mscore/ChangeLog
+++ b/branches/mscore-0-9-6/mscore/ChangeLog
@@ -1,3 +1,5 @@
+27.dec (lv)
+      - importxml.cpp cleanup
 22.dec (ws)
       - save "pos" element in addition to "offset" for better upward
         compatibility to 2.0 version
