--- a/mscore/ChangeLog
+++ b/mscore/ChangeLog
@@ -1,4 +1,6 @@
 25.1 (ws)
+      - enhanced palette layout
+      - fix palette grid drawing
       - patch #14598: Staff text for other (non-first) staves is placed
         relatively to first stave (patch from miwarre)
 24.1 (ws)
